# FacturadorAFIP_Server

./: .gitignore  CMakeLists.txt  Dockerfile  run-docker-server.sh  run-docker.sh
src/: config.cpp  config.hpp  database.cpp  database.hpp  invoice.cpp  invoice.hpp  main.cpp  printer.cpp  printer.hpp  websocket.cpp  websocket.hpp
src/afip/: login.cpp  login.hpp  wsfe.cpp  wsfe.hpp
src/libraries/mysql+++/: mysql+++.h
src/soap/: ServiceSoap12.nsmap  afipC.cpp  afipH.h  afipLoginCmsSoapBindingProxy.cpp  afipLoginCmsSoapBindingProxy.h  afipServiceSoapProxy.cpp  afipServiceSoapProxy.h  afipStub.h  soapC.cpp  soapH.h  soapLoginCmsSoapBindingProxy.cpp  soapLoginCmsSoapBindingProxy.h  soapServiceSoap12Proxy.cpp  soapServiceSoap12Proxy.h  soapServiceSoapProxy.cpp  soapServiceSoapProxy.h  soapStub.h  xcode.cpp
